# airspace-loader-rs

./: Cargo.toml  README.md  flake.nix  open_aip_test.xml
src/: airspace.rs  example.rs  lib.rs  main.rs  open_aip.rs
tests/: integration_test.rs
tests/common/: mod.rs
tests/open_aip/: ch_asp.xml
