[package]
name = "airspace_loader_rs"
version = "0.1.0"
edition = "2018"
authors = ["Beat Scherrer <beat.scherrer@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
pretty_env_logger = "0.4"

[dev-dependencies]
pretty_assertions = "1.0"
